--- a/myblog/_config.yml
+++ b/myblog/_config.yml
@@ -18,19 +18,21 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: John Sturgeon
+name: John Sturgeon
+subtitle: Working on way too many projects and hobbies, and making notes here along the way.
+email: john.sturgeon@me.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+  Retired software engineer, contributor to open source projects when I can.
+  Working on way too many projects and hobbies, and making notes here along the way.
+url: "https://johnsturgeon.me" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: ""
+github_username:  johnsturgeon
+repository: johnsturgeon/blog
 
 # Build settings
 theme: minimal-mistakes-jekyll
+minimal_mistakes_skin: "default"
 plugins:
   - jekyll-feed
 
