--- a/myblog/_config.yml
+++ b/myblog/_config.yml
@@ -24,7 +24,7 @@ email: john.sturgeon@me.com
 description: >- # this means to ignore newlines until "baseurl:"
   Retired software engineer, contributor to open source projects when I can.
   Working on way too many projects and hobbies, and making notes here along the way.
-url: "https://johnsturgeon.me" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://johnsturgeon.ca" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ""
 github_username:  johnsturgeon
 repository: johnsturgeon/blog
