--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -62,6 +62,7 @@ markdown_extensions:
   - pymdownx.caret
   - pymdownx.mark
   - pymdownx.tilde
+  - footnotes
   - pymdownx.highlight:
       anchor_linenums: true
       line_spans: __span
