--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ mkdocs==1.6.0
 mkdocs-get-deps==0.2.0
 mkdocs-material==9.5.28
 mkdocs-material-extensions==1.3.1
+mkdocs-rss-plugin==1.15.0
 msgpack==1.0.8
 packaging==24.1
 paginate==0.5.6
