Fixed the author slug for Mastodon

--- a/docs/.authors.yml
+++ b/docs/.authors.yml
@@ -3,5 +3,5 @@ authors:
     name: John Sturgeon
     description: Retired software engineer.
     avatar: assets/images/bio-photo.png
-    slug: https://github.com/johnsturgeon
-    url: https://github.com/johnsturgeon
+    slug: https://mastodon.social/@johnsturgeon
+    url: https://mastodon.social/@johnsturgeon
