--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
 Babel==2.15.0
 CacheControl==0.14.0
+cairocffi==1.7.1
+CairoSVG==2.7.1
 certifi==2024.7.4
+cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+cssselect2==0.7.0
+defusedxml==0.7.1
 filelock==3.15.4
 ghp-import==2.1.0
 gitdb==4.0.11
@@ -22,7 +27,9 @@ msgpack==1.0.8
 packaging==24.1
 paginate==0.5.6
 pathspec==0.12.1
+pillow==10.4.0
 platformdirs==4.2.2
+pycparser==2.22
 Pygments==2.18.0
 pymdown-extensions==10.8.1
 python-dateutil==2.9.0.post0
@@ -32,5 +39,7 @@ regex==2024.5.15
 requests==2.32.3
 six==1.16.0
 smmap==5.0.1
+tinycss2==1.3.0
 urllib3==2.2.2
 watchdog==4.0.1
+webencodings==0.5.1
