--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,7 +3,7 @@ site_name: John Sturgeon
 site_description: >- 
   Retired software engineer, contributor to open source projects when I can.
   Working on way too many projects and hobbies, and making notes here along the way.
-site_url: https://newblog.johnsturgeon.me/
+site_url: https://johnsturgeon.me/
 site_author: johnsturgeon
 theme:
   name: material
