Added one more old blog post

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,6 +9,7 @@ theme:
   name: material
   features:
     - navigation.indexes
+    - navigation.footer
     - content.code.annotation
     - content.code.copy
   custom_dir: overrides
